patch(866ajw278): correction of z-indexes

--- a/sass/03-globals/_loader.scss
+++ b/sass/03-globals/_loader.scss
@@ -9,7 +9,7 @@
   z-index: 1;
   height: calc(100% + $safe_area_inset_top);
   width: 100%;
-  z-index: 1111;
+  z-index: 200;
   display: flex;
   align-items: center;
   justify-content: center;
